design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/icecream/Chocolate.java
package com.farhad.example.design_principles02.dessert.bad.icecream;

public class Chocolate extends IceCream {

	public Chocolate(String taste) {
		super(taste);
	}

	@Override
	public void serve() {
	}

}
